Prevent content shift when expanded on small screens

--- a/packages/usa-banner/src/styles/_usa-banner.scss
+++ b/packages/usa-banner/src/styles/_usa-banner.scss
@@ -142,6 +142,11 @@ $banner-icon-close: (
   @include at-media("tablet") {
     @include u-flex("align-center");
   }
+
+  // Prevents content shift when expanded on small screens
+  & > .grid-col-fill {
+    flex: 1 1 0%;
+  }
 }
 
 .usa-banner__header {
